Fixed the footer icon spacing issue

--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -11,13 +11,29 @@ footer {
         justify-content: flex-end;
     }
 
+    ul { 
+        display: flex; 
+        align-items: center; 
+        justify-content: flex-end; 
+        padding: 0; 
+        margin: 0; 
+        height: 100%;
+    }
+
+    li { 
+        list-style: none; 
+        margin-right: 20px;
+        
+        &:last-child { 
+            margin-right: 0; 
+        }
+    }
+
     a {
         color: $accent-color; 
 
         display: inline-block; 
-        
-        margin-right:20px;
-        
+
         transition-duration: $hover-trans-time;
         
         &:hover{
